--- a/PerroQueLadraProject/package.json
+++ b/PerroQueLadraProject/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.33.0",
+    "@strapi/plugin-graphql": "^5.33.1",
     "@strapi/plugin-users-permissions": "5.33.0",
     "@strapi/strapi": "5.33.0",
     "better-sqlite3": "12.4.1",
@@ -24,7 +25,6 @@
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=20.0.0 <=24.x.x",
     "npm": ">=6.0.0"
